plugins {
    id 'java-gradle-plugin'
}

group = 'com.divio.gradle'
version = '1.0.0-SNAPSHOT'

repositories {
    jcenter()
    mavenLocal()
}

sourceCompatibility = 1.8

dependencies {
    implementation gradleApi()

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.3'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.1'

    runtime 'org.hibernate.validator:hibernate-validator:6.1.2.Final'
    runtime 'org.glassfish:javax.el:3.0.1-b11'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
    testImplementation 'org.assertj:assertj-core:3.15.0'
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
}
